--- a/views/login.ejs
+++ b/views/login.ejs
@@ -120,6 +120,11 @@
             <i class="bi bi-box-arrow-in-right me-2"></i>Masuk
           </button>
         </form>
+		<% if (error) { %>
+		<div class="alert alert-danger mt-3 text-center">
+			<i class="bi bi-exclamation-triangle me-2"></i><%= error %>
+		</div>
+		<% } %>
         <div class="text-center footer-text">
           &copy; <%= new Date().getFullYear() %> ALIJAYA DIGITAL NETWORK
         </div>
