--- a/views/otp.ejs
+++ b/views/otp.ejs
@@ -151,7 +151,7 @@
           </button>
         </form>
         <div class="text-center footer-text">
-          &copy; <%= new Date().getFullYear() %> ALIJAYA DIGITAL NETWORK
+          &copy; <%= new Date().getFullYear() %> Digital Medianet27
         </div>
       </div>
     </div>
