--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dashboard Pelanggan | Portal ISP</title>
+  <title>Dashboard Pelanggan | G-Net</title>
+  <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="/css/style.css">
@@ -444,7 +445,7 @@
   </div>
 
   <footer class="footer">
-    &copy; <%= new Date().getFullYear() %> ALIJAYA DIGITAL NETWORK
+    &copy; <%= new Date().getFullYear() %> Digital Medianet27
   </footer>
 </body>
 </html> 
